--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Infinity Car</title>
+    <title>Cristal Motors</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
       <div class="content">
         <nav>
-          <p class="brand">Infinity<strong>Car</strong></p>
+          <p class="brand">Cristal<strong>Motors</strong></p>
           <ul>
             <li><a href="#catalog">Catálogo</a></li>
             <li><a href="#contato">Contato</a></li>
