--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
               O que está esperando para realizar o seu sonho? Nós queremos te ajudar a ter um processo de compra fácil e rápido!
             </p>
           </div>
-          <img src="images/car-header.png" alt="Car" />
+          <img src="images/principal.png" alt="Car" />
         </div>
       </div>
     </header>
     <section class="catalog" id="catalog">
       <div class="content">
-        <div class="title-wrapper-catalog">
+        <!-- <div class="title-wrapper-catalog">
           <p>Procure o que você precisa</p>
           <h3>Catálogo</h3>
         </div>
@@ -41,104 +41,77 @@
             placeholder="Procure seu modelo favorito"
           />
           <button class="search-button">Busca</button>
-        </div>
+        </div> -->
         <div class="card-wrapper">
           <div class="card-item">
-            <img src="images/car-card.png" alt="Car" />
+            <img src="images/principal.png" alt="Car" />
             <div class="card-content">
-              <h3>Audi Supra TT</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Repellendus.
-              </p>
+              <h3>Sandero Expression Hi-power 1.0 16v 5p - 2015</h3>
+              <h1 class="valor">R$ 27.990</h1>
               <button type="button">Ver detalhes</button>
             </div>
           </div>
           <div class="card-item">
-            <img src="images/car-card.png" alt="Car" />
+            <img src="images/principal.png" alt="Car" />
             <div class="card-content">
-              <h3>Audi Supra TT</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Repellendus.
-              </p>
+              <h3>Onix Hatch Lt 1.0 12v Flex 5p Mec. - 2021</h3>
+              <h1 class="valor">R$ 62.990</h1>
               <button type="button">Ver detalhes</button>
             </div>
           </div>
           <div class="card-item">
-            <img src="images/car-card.png" alt="Car" />
+            <img src="images/principal.png" alt="Car" />
             <div class="card-content">
-              <h3>Audi Supra TT</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Repellendus.
-              </p>
+              <h3>Cruze Lt 1.4 16v Turbo Flex 4p Aut. - 2022</h3>
+              <h1 class="valor">R$ 15.990</h1>
               <button type="button">Ver detalhes</button>
             </div>
           </div>
           <div class="card-item">
-            <img src="images/car-card.png" alt="Car" />
+            <img src="images/principal.png" alt="Car" />
             <div class="card-content">
-              <h3>Audi Supra TT</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Repellendus.
-              </p>
+              <h3>Kicks Sense 1.6 16v Flex Aut. - 2022</h3>
+              <h1 class="valor">R$ 46.990</h1>
               <button type="button">Ver detalhes</button>
             </div>
           </div>
           <div class="card-item">
-            <img src="images/car-card.png" alt="Car" />
+            <img src="images/principal.png" alt="Car" />
             <div class="card-content">
-              <h3>Audi Supra TT</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Repellendus.
-              </p>
+              <h3>Saveiro Robust 1.6 Total Flex 8v - 2022</h3>
+              <h1 class="valor">R$ 21.990</h1>
               <button type="button">Ver detalhes</button>
             </div>
           </div>
           <div class="card-item">
-            <img src="images/car-card.png" alt="Car" />
+            <img src="images/principal.png" alt="Car" />
             <div class="card-content">
-              <h3>Audi Supra TT</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Repellendus.
-              </p>
+              <h3>Tiggo 3x Pro 1.0 Turbo Flex Aut. - 2023</h3>
+              <h1 class="valor">R$ 76.990</h1>
               <button type="button">Ver detalhes</button>
             </div>
           </div>
           <div class="card-item">
-            <img src="images/car-card.png" alt="Car" />
+            <img src="images/principal.png" alt="Car" />
             <div class="card-content">
-              <h3>Audi Supra TT</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Repellendus.
-              </p>
+              <h3>Kwid Zen 1.0 Flex 12v 5p Mec. - 2022</h3>
+              <h1 class="valor">R$ 23.990</h1>
               <button type="button">Ver detalhes</button>
             </div>
           </div>
           <div class="card-item">
-            <img src="images/car-card.png" alt="Car" />
+            <img src="images/principal.png" alt="Car" />
             <div class="card-content">
-              <h3>Audi Supra TT</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Repellendus.
-              </p>
+              <h3>Virtus Comfort. 200 Tsi 1.0 Flex 12v Aut - 2021</h3>
+              <h1 class="valor">R$ 35.990</h1>
               <button type="button">Ver detalhes</button>
             </div>
           </div>
           <div class="card-item">
-            <img src="images/car-card.png" alt="Car" />
+            <img src="images/principal.png" alt="Car" />
             <div class="card-content">
-              <h3>Audi Supra TT</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Repellendus.
-              </p>
+              <h3>Ka 1.0 8v/1.0 8v St Flex 3p - 2013</h3>
+              <h1 class="valor">R$ 32.990</h1>
               <button type="button">Ver detalhes</button>
             </div>
           </div>
