--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </div> -->
         <div class="card-wrapper">
           <div class="card-item">
-            <img src="images/principal.png" alt="Car" />
+            <img src="images/clio.png" alt="Car" />
             <div class="card-content">
-              <h3>Sandero Expression Hi-power 1.0 16v 5p - 2015</h3>
+              <h3>Clio Expression Hi-power 1.0 16v 5p - 2015</h3>
               <h1 class="valor">R$ 27.990</h1>
               <button type="button">Ver detalhes</button>
             </div>
