--- a/index.html
+++ b/index.html
@@ -9,27 +9,25 @@
   </head>
   <body>
     <header>
-      <div class="content">
         <nav>
-          <p class="brand">Cristal<strong>Motors</strong></p>
+          <img src="images/logoCristal Motors.png" alt="brand"/>
           <ul>
             <li><a href="#catalog">Catálogo</a></li>
             <li><a href="#contato">Contato</a></li>
           </ul>
         </nav>
-        <div class="header-block">
-          <div class="text">
-            <h2>O carro perfeito para você</h2>
-            <p>
-              O que está esperando para realizar o seu sonho? Nós queremos te ajudar a ter um processo de compra fácil e rápido!
-            </p>
-          </div>
-          <img src="images/principal.png" alt="Car" />
-        </div>
-      </div>
     </header>
+    <div class="header-block">
+      <div class="text">
+        <h2>O carro perfeito para você</h2>
+        <p>
+          O que está esperando para realizar o seu sonho? Nós queremos te ajudar a ter um processo de compra fácil e rápido!
+        </p>
+      </div>
+      <img src="images/principal.png" alt="Car" />
+    </div>
     <section class="catalog" id="catalog">
-      <div class="content">
+      <div class="content2">
         <!-- <div class="title-wrapper-catalog">
           <p>Procure o que você precisa</p>
           <h3>Catálogo</h3>
